WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128558
WK2 AVKit enter fullscreen doesn't work a second time.
https://bugs.webkit.org/show_bug.cgi?id=128558
Summary
WK2 AVKit enter fullscreen doesn't work a second time.
Jeremy Jones
Reported
2014-02-10 15:36:07 PST
WebVideoFullscreenInterfaceAVKit's m_playerController get's cleared on exitfullscreen() and never recreated.
Attachments
Patch
(6.47 KB, patch)
2014-02-10 15:43 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(6.49 KB, patch)
2014-02-10 15:52 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(6.46 KB, patch)
2014-02-10 16:05 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-02-10 15:43:18 PST
Created
attachment 223757
[details]
Patch
Jer Noble
Comment 2
2014-02-10 15:48:26 PST
Comment on
attachment 223757
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223757&action=review
> Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:57 > + WebAVPlayerController *getPlayerController();
This should just be "playerController()", or perhaps "ensurePlayerController()" due to the lazy-creation.
> Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:225 > + if (m_videoFullscreenModel) > + m_playerController.get().delegate = m_videoFullscreenModel;
shouldn't this be in the "if (!m_playerController)" case?
Jeremy Jones
Comment 3
2014-02-10 15:49:25 PST
(In reply to
comment #2
)
> (From update of
attachment 223757
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=223757&action=review
> > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:57 > > + WebAVPlayerController *getPlayerController(); > > This should just be "playerController()", or perhaps "ensurePlayerController()" due to the lazy-creation. > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:225 > > + if (m_videoFullscreenModel) > > + m_playerController.get().delegate = m_videoFullscreenModel; > > shouldn't this be in the "if (!m_playerController)" case?
Good point. I'll fix that.
Jeremy Jones
Comment 4
2014-02-10 15:52:01 PST
Created
attachment 223759
[details]
Patch
Jeremy Jones
Comment 5
2014-02-10 15:53:55 PST
(In reply to
comment #2
)
> (From update of
attachment 223757
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=223757&action=review
> > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:57 > > + WebAVPlayerController *getPlayerController(); > > This should just be "playerController()", or perhaps "ensurePlayerController()" due to the lazy-creation.
I thought style guidelines require getters to begin with "get".
Jeremy Jones
Comment 6
2014-02-10 15:55:00 PST
(In reply to
comment #5
)
> (In reply to
comment #2
) > > (From update of
attachment 223757
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=223757&action=review
> > > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:57 > > > + WebAVPlayerController *getPlayerController(); > > > > This should just be "playerController()", or perhaps "ensurePlayerController()" due to the lazy-creation. > > I thought style guidelines require getters to begin with "get".
Sorry, I'm wrong. I actually originally had playerController(). I'll switch back to that.
Jeremy Jones
Comment 7
2014-02-10 16:05:21 PST
Created
attachment 223761
[details]
Patch
Jer Noble
Comment 8
2014-02-10 16:09:01 PST
Comment on
attachment 223761
[details]
Patch r=me.
WebKit Commit Bot
Comment 9
2014-02-15 00:20:21 PST
Comment on
attachment 223761
[details]
Patch Clearing flags on attachment: 223761 Committed
r164161
: <
http://trac.webkit.org/changeset/164161
>
WebKit Commit Bot
Comment 10
2014-02-15 00:20:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug